--- a/Dockerfile-tideways
+++ b/Dockerfile-tideways
@@ -1,4 +1,4 @@
-ARG PHP_VERSION
+ARG PHP_VERSION=8.1
 
 FROM php:${PHP_VERSION} as builder
 
@@ -8,29 +8,27 @@ LABEL container="PHP tideways apm image container"
 ENV DEBIAN_FRONTEND=noninteractive
 ENV TERM=xterm-color
 ENV SHELL=/bin/bash
-ENV MAKEFLAGS="-j 8 --load-average=10"
-
-RUN apt-get update && \
-    apt-get install -y libmcrypt-dev zlib1g-dev libmemcached-dev \
-                       git automake wget unzip libtool-bin cmake \
-                       apt-transport-https lsb-release ca-certificates libfcgi0ldbl \
-                       openssl libssl-dev libzip-dev libbz2-dev libunwind-dev
-
-COPY ./get_arch.sh /
-RUN chmod +x /get_arch.sh
 
 # https://tideways.com/profiler/blog/changelog
-ENV TIDEWAYS_EXT_VER=5.5.2
-ENV TIDEWAYS_DAEMON_VER=1.7.28
+ARG TIDEWAYS_EXT_VER=5.5.2
+ARG TIDEWAYS_DAEMON_VER=1.7.28
 
 # https://s3-eu-west-1.amazonaws.com/tideways/extension/5.5.2/tideways-php-5.5.2-arm64.tar.gz
 # https://s3-eu-west-1.amazonaws.com/tideways/extension/5.5.2/tideways-php-5.5.2-x86_64.tar.gz
-RUN wget https://s3-eu-west-1.amazonaws.com/tideways/extension/${TIDEWAYS_EXT_VER}/tideways-php-${TIDEWAYS_EXT_VER}-$(/get_arch.sh).tar.gz -O /tmp/tideways-ext.tar.gz && \
+RUN curl -LSs https://s3-eu-west-1.amazonaws.com/tideways/extension/${TIDEWAYS_EXT_VER}/tideways-php-${TIDEWAYS_EXT_VER}-$(dpkg-architecture --query DEB_BUILD_GNU_CPU).tar.gz -o /tmp/tideways-ext.tar.gz && \
     tar -xzf /tmp/tideways-ext.tar.gz -C /tmp && cd /tmp/tideways-${TIDEWAYS_EXT_VER} && \
-    ./install.sh && cp tideways.ini /usr/local/etc/php-fpm.d/
+    ./install.sh && docker-php-ext-enable tideways
 
 # https://s3-eu-west-1.amazonaws.com/tideways/daemon/1.7.28/tideways-daemon_linux_amd64-1.7.28.tar.gz
 # https://s3-eu-west-1.amazonaws.com/tideways/daemon/1.7.28/tideways-daemon_linux_aarch64-1.7.28.tar.gz
-# RUN wget -O tideways-daemon.tar.gz https://s3-eu-west-1.amazonaws.com/tideways/daemon/${TIDEWAYS_DAEMON_VER}/tideways-daemon_linux_$(uname -m)-${TIDEWAYS_DAEMON_VER}.tar.gz && \
-#     tar -xzf /tmp/tideways-daemon.tar.gz -C /tmp && cd /tmp/tideways-daemon_${TIDEWAYS_DAEMON_VER} && \
-#     ls -la
+RUN curl -LSs https://s3-eu-west-1.amazonaws.com/tideways/daemon/${TIDEWAYS_DAEMON_VER}/tideways-daemon_linux_$(dpkg-architecture --query DEB_BUILD_ARCH)-${TIDEWAYS_DAEMON_VER}.tar.gz -o /tmp/tideways-daemon.tar.gz && \
+    tar -xzf /tmp/tideways-daemon.tar.gz -C /tmp && \
+    cp /tmp/tideways-daemon_${TIDEWAYS_DAEMON_VER}/tideways-daemon /usr/local/bin/tideways-daemon && \
+    chmod +x /usr/local/bin/tideways-daemon
+
+FROM php:${PHP_VERSION}
+COPY --from=builder /usr/local/lib/php/extensions/no-debug-non-zts-20210902/tideways.so /tmp/tideways.so
+COPY --from=builder /usr/local/etc/php/conf.d/docker-php-ext-tideways.ini /usr/local/etc/php/conf.d/docker-php-ext-tideways.ini
+COPY --from=builder /usr/local/bin/tideways-daemon /usr/local/bin/tideways-daemon
+RUN mkdir -p $(php-config --extension-dir) && mv /tmp/tideways.so $(php-config --extension-dir)/
+
