--- a/.github/workflows/php-build.yaml
+++ b/.github/workflows/php-build.yaml
@@ -1,5 +1,8 @@
 name: docker-php-apm-build
 
+env:
+  registry: ghcr.io
+
 on:
   push:
     tags:
@@ -69,7 +72,7 @@ jobs:
       - name: Login to GHRC
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
         with:
-          registry: ghcr.io
+          registry: ${{ env.registry }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
@@ -79,7 +82,7 @@ jobs:
           context: .
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: ghcr.io/pixelfederation/php-apm:${{ steps.semver.outputs.pft }}-skywalking
+          tags: ${{ env.registry }}/${{ env.GITHUB_REPOSITORY }}:${{ steps.semver.outputs.pft }}-skywalking
           builder: ${{ steps.buildx.outputs.name }}
           file: Dockerfile-skywalking
           build-args: |
