--- a/.github/workflows/php-build.yaml
+++ b/.github/workflows/php-build.yaml
@@ -82,7 +82,7 @@ jobs:
           context: .
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: ${{ env.registry }}/${{ env.GITHUB_REPOSITORY }}:${{ steps.semver.outputs.pft }}-skywalking
+          tags: ${{ env.registry }}/${{ github.repository }}:${{ steps.semver.outputs.pft }}-skywalking
           builder: ${{ steps.buildx.outputs.name }}
           file: Dockerfile-skywalking
           build-args: |
