--- a/.github/workflows/php-build.yaml
+++ b/.github/workflows/php-build.yaml
@@ -28,19 +28,13 @@ jobs:
           else
             tag=${{ github.event.inputs.custom_tag }}
           fi
-          echo "PfTag: ${tag}"
-          echo "::set-output name=pftag::$tag"
-
-      - name: Parse tag semver string
-        id: semver
-        uses: pixelfederation/gh-action-semver-parser@v0.1.2
-        with:
-          tag: ${{ steps.tag.outputs.pftag }}
+          echo "Tag: ${tag}"
+          echo "::set-output name=tag::$tag"
 
       - name: Checkout Server
         uses: actions/checkout@v3
         with:
-          ref: ${{ steps.tag.outputs.pftag }}
+          ref: ${{ steps.tag.outputs.tag }}
 
       - name: Create docker context
         run: |
@@ -63,11 +57,7 @@ jobs:
           echo "Status:    ${{ steps.buildx.outputs.status }}"
           echo "Flags:     ${{ steps.buildx.outputs.flags }}"
           echo "Platforms: ${{ steps.buildx.outputs.platforms }}"
-          echo "Release":  ${{ steps.semver.outputs.release }}"
-          echo "ut":       ${{ steps.semver.outputs.ut }}"
-          echo "pft:       ${{ steps.semver.outputs.pft }}"
-          echo "mmr:       ${{ steps.semver.outputs.mmr }}"
-          echo "mmpr:      ${{ steps.semver.outputs.mmpr }}"
+          echo "Build tag  ${{ steps.semver.outputs.tag }}-skywalking"
 
       - name: Login to GHRC
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
@@ -82,8 +72,8 @@ jobs:
           context: .
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: ${{ env.registry }}/${{ github.repository }}:${{ steps.semver.outputs.pft }}-skywalking
+          tags: ${{ env.registry }}/${{ github.repository }}:${{ steps.semver.outputs.tag }}-skywalking
           builder: ${{ steps.buildx.outputs.name }}
           file: Dockerfile-skywalking
           build-args: |
-            PHP_VERSION: ${{ steps.semver.outputs.mmpr }}
+            PHP_VERSION: ${{ steps.tag.outputs.tag }}
