--- a/.github/workflows/php-build.yaml
+++ b/.github/workflows/php-build.yaml
@@ -57,7 +57,7 @@ jobs:
           echo "Status:    ${{ steps.buildx.outputs.status }}"
           echo "Flags:     ${{ steps.buildx.outputs.flags }}"
           echo "Platforms: ${{ steps.buildx.outputs.platforms }}"
-          echo "Build tag  ${{ steps.semver.outputs.tag }}-skywalking"
+          echo "Build tag  ${{ steps.tag.outputs.tag }}-skywalking"
 
       - name: Login to GHRC
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
@@ -72,7 +72,7 @@ jobs:
           context: .
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: ${{ env.registry }}/${{ github.repository }}:${{ steps.semver.outputs.tag }}-skywalking
+          tags: ${{ env.registry }}/${{ github.repository }}:${{ steps.tag.outputs.tag }}-skywalking
           builder: ${{ steps.buildx.outputs.name }}
           file: Dockerfile-skywalking
           build-args: |
