--- a/Dockerfile-skywalking
+++ b/Dockerfile-skywalking
@@ -20,9 +20,8 @@ RUN curl https://sh.rustup.rs -LsSf | sh -s -- -y
 ENV PATH=${PATH}:/root/.cargo/bin
 
 RUN curl --silent -L -o /tmp/protobuf.zip $PROTOBUF_URL && cd /tmp/ && unzip protobuf.zip && \
-    cd protobuf-$PROTOBUF_VERSION && ./configure && make -j$(nproc) && make install
-
-RUN git clone --depth 1 -b ${SKYAPM_VERS} https://github.com/SkyAPM/SkyAPM-php-sdk.git /tmp/SkyAPM-php-sdk && cd /tmp/SkyAPM-php-sdk  && \
+    cd protobuf-$PROTOBUF_VERSION && ./configure && make -j$(nproc) && make install && \
+    git clone --depth 1 -b ${SKYAPM_VERS} https://github.com/SkyAPM/SkyAPM-php-sdk.git /tmp/SkyAPM-php-sdk && cd /tmp/SkyAPM-php-sdk  && \
     phpize && git submodule update --init && ./configure && make install && docker-php-ext-enable skywalking
 
 FROM php:${PHP_VERSION}
