--- a/.github/workflows/php-build.yaml
+++ b/.github/workflows/php-build.yaml
@@ -70,7 +70,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          platforms: linux/amd64
+          platforms: linux/amd64,linux/arm64
           push: true
           tags: ${{ env.registry }}/${{ github.repository }}:${{ steps.tag.outputs.tag }}-skywalking
           builder: ${{ steps.buildx.outputs.name }}
