--- a/.github/workflows/php-build.yaml
+++ b/.github/workflows/php-build.yaml
@@ -66,7 +66,7 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and push
+      - name: Build and push skywalking
         uses: docker/build-push-action@v2
         with:
           context: .
@@ -78,3 +78,15 @@ jobs:
           build-args: |
             PHP_VERSION=${{ steps.tag.outputs.tag }}
             SKYAPM_VERS=v4.2.0
+      
+      - name: Build and push newrelic
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          platforms: linux/amd64,linux/arm64
+          push: true
+          tags: ${{ env.registry }}/${{ github.repository }}:${{ steps.tag.outputs.tag }}-newrelic
+          builder: ${{ steps.buildx.outputs.name }}
+          file: Dockerfile-newrelic
+          build-args: |
+            PHP_VERSION=${{ steps.tag.outputs.tag }}
