--- a/Dockerfile-newrelic
+++ b/Dockerfile-newrelic
@@ -27,4 +27,6 @@ COPY --from=builder /usr/local/lib/php/extensions/*/newrelic.so /tmp/newrelic.so
 COPY --from=builder /usr/local/etc/php/conf.d/docker-php-ext-newrelic.ini  /usr/local/etc/php/conf.d/docker-php-ext-newrelic.ini
 COPY --from=builder /tmp/newrelic-php-agent/bin/client  /usr/local/bin/newrelic-client
 COPY --from=builder /tmp/newrelic-php-agent/bin/daemon  /usr/local/bin/newrelic-daemon
-RUN mkdir -p $(php-config --extension-dir) && mv /tmp/newrelic.so $(php-config --extension-dir)/
+RUN mkdir -p $(php-config --extension-dir) && mkdir -p /src/ \
+    && cp /tmp/newrelic.so $(php-config --extension-dir)/ \
+    && mv /tmp/newrelic.so /src/
