--- a/.github/workflows/php-build.yaml
+++ b/.github/workflows/php-build.yaml
@@ -79,14 +79,26 @@ jobs:
 #            PHP_VERSION=${{ steps.tag.outputs.tag }}
 #            SKYAPM_VERS=v4.2.0
       
-      - name: Build and push newrelic
+#      - name: Build and push newrelic
+#        uses: docker/build-push-action@v2
+#        with:
+#          context: .
+#          platforms: linux/amd64,linux/arm64
+#          push: true
+#          tags: ${{ env.registry }}/${{ github.repository }}:${{ steps.tag.outputs.tag }}-newrelic
+#          builder: ${{ steps.buildx.outputs.name }}
+#          file: Dockerfile-newrelic
+#          build-args: |
+#            PHP_VERSION=${{ steps.tag.outputs.tag }}
+
+      - name: Build and push tideways
         uses: docker/build-push-action@v2
         with:
           context: .
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: ${{ env.registry }}/${{ github.repository }}:${{ steps.tag.outputs.tag }}-newrelic
+          tags: ${{ env.registry }}/${{ github.repository }}:${{ steps.tag.outputs.tag }}-tideways
           builder: ${{ steps.buildx.outputs.name }}
-          file: Dockerfile-newrelic
+          file: Dockerfile-tideways
           build-args: |
             PHP_VERSION=${{ steps.tag.outputs.tag }}
