Add versions to env and bump

--- a/.github/workflows/php-build.yaml
+++ b/.github/workflows/php-build.yaml
@@ -2,6 +2,9 @@ name: docker-php-apm-build
 
 env:
   registry: ghcr.io
+  TIDEWAYS_EXT_VER: 5.5.9
+  TIDEWAYS_DAEMON_VER: 1.8.12
+
 
 on:
   push:
@@ -97,8 +100,11 @@ jobs:
           context: .
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: ${{ env.registry }}/${{ github.repository }}:${{ steps.tag.outputs.tag }}-tideways
+          tags: ${{ env.registry }}/${{ github.repository }}:${{ steps.tag.outputs.tag }}-tideways, ${{ env.registry }}/${{ github.repository }}:${{ steps.tag.outputs.tag }}-tideways-${{ env.TIDEWAYS_EXT_VER }}-${{ env.TIDEWAYS_DAEMON_VER }}
           builder: ${{ steps.buildx.outputs.name }}
           file: Dockerfile-tideways
           build-args: |
             PHP_VERSION=${{ steps.tag.outputs.tag }}
+            TIDEWAYS_EXT_VER=${{ env.TIDEWAYS_EXT_VER }}
+            TIDEWAYS_DAEMON_VER=${{ env.TIDEWAYS_DAEMON_VER }}
+
